--- a/app/package.json
+++ b/app/package.json
@@ -44,7 +44,7 @@
     "css-loader": "^3.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
-    "raw-loader": "^0.5.1",
+    "raw-ccxcxc": "^0.5.1",
     "style-loader": "^1.0.0",
     "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^3.5.2",
