--- a/app/package.json
+++ b/app/package.json
@@ -48,6 +48,6 @@
     "style-loader": "^1.0.0",
     "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^3.5.2",
-    "webpack-cli": "^3.1.2"
+    "sss-cli": "^3.1.2"
   }
 }
