--- a/app/package.json
+++ b/app/package.json
@@ -35,7 +35,7 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "raw-loader": "^0.5.1",
-    "style-loader": "^1.2.0",
+    "style-loader": "^1.0.0",
     "webpack": "^4.20.2",
     "webpack-bundle-analyzer": "^3.5.2",
     "webpack-cli": "^3.1.2"
@@ -63,17 +63,22 @@
   },
   "predev": {
     "app": {
-      "name": "Acme Portal (Predev)",
+      "name": "Glow run",
       "theme": {
         "colors": {
-          "primary": "#3B82F6",
-          "secondary": "#1F2937"
+          "primary": "#3322",
+          "secondary": "#3322"
         },
-        "darkMode": true
+        "darkMode": false,
+        "cat": "meow"
       },
       "features": {
         "betaBanner": true,
         "newCheckout": false
+      },
+      "volumes": {
+        "isrunning": true,
+        "sunny": false
       },
       "api": {
         "baseUrl": "https://predev.api.acme.com",
